--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -1,18 +1,46 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>O Burguês - Hamburgueria Artesanal</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-        <header>
-            <img src="https://www.oburgues.com/imagem/logo.png">
-            <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
-  <button>Faça seu pedido agora!!</button>
-</a>
+    <header>
+        <img src="https://www.oburgues.com/imagem/logo.png" alt="Logo O Burguês">
+        <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
+            <button>Faça seu pedido agora!!</button>
+        </a>
+
+        <nav>
+            <a href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank">Cardápio</a>
+            <a href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank">Lojas</a>
+            <a href="https://www.oburgues.com/#quemsomos" target="_blank">Quem Somos</a>
+        </nav>
+    </header>
+
+    <!-- Pricipal conteúdo da página -->
+        <section>
+            <h1>Bem-vindo à "O Burguês"</h1>
+            <p>Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</p>
+        </section>
+
+        <section>
+            <h2>Contato</h2>
+            <p>Email: expansao@grupoburgues.com.br </p>
+            <p>Telefone: (83) 3113-6194</p>
+            <p>Siga a gente no <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">Instagram</a></p>
+        </section>
+
+
+    <footer style="text-align: center; padding: 20px; background-color: #f8f8f8; margin-top: 40px;">
+        <p>&copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.</p>
+        <p>
+            Siga a gente nas redes sociais
         
-    <nav>
-      <a href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank">Cardápio</a>
-      <a href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank">Lojas</a>
-      <a href="https://www.oburgues.com/#quemsomos" id="quemsomos" target "_blank">Quem Somos</a>"
-    </nav>
-        </header>
-    </head>
+        </p>
+    </footer>
+</body>
 </html>
