--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -15,9 +15,9 @@
         </a>
 
         <nav>
-            <a href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank">Cardápio</a>
-            <a href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank">Lojas</a>
-            <a href="https://www.oburgues.com/#quemsomos" target="_blank">Quem Somos</a>
+            <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank">Cardápio</a>
+            <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank">Lojas</a>
+            <a id="botao" href="https://www.oburgues.com/#quemsomos" target="_blank">Quem Somos</a>
         </nav>
     </header>
 
