--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -11,7 +11,7 @@
     <header>
         <img src="https://www.oburgues.com/imagem/logo.png" alt="Logo O Burguês">
         <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
-            <button>Faça seu pedido agora!!</button>
+            <button>FAÇA SEU PEDIDO AGORA!!</button>
         </a>
 
         <nav>
@@ -35,7 +35,7 @@
         </section>
 
 
-    <footer style="text-align: center; padding: 20px; background-color: #f8f8f8; margin-top: 40px;">
+    <footer>
         <p>&copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.</p>
         <p>
             Siga a gente nas redes sociais
