--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="https://www.oburgues.com/imagem/logo.png" alt="Logo O Burguês">
+        <img src="C:\Users\Windows 10 PRO\Downloads\logo_192x121.png" alt="Logo O Burguês">
         <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
             <button>FAÇA SEU PEDIDO AGORA!!</button>
         </a>
