--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -10,38 +10,33 @@
 <body>
 
     <header>
-        <img src="C:\Users\Windows 10 PRO\Downloads\logo_192x121.png" alt="Logo O Burguês">
+        <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
         <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
             <button>FAÇA SEU PEDIDO AGORA!!</button>
         </a>
 
         <nav>
-            <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank">Cardápio</a>
-            <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank">Lojas</a>
-            <a id="botao" href="https://www.oburgues.com/#quemsomos" target="_blank">Quem Somos</a>
+            <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank"><strong>Cardápio</strong></a>
+            <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank"><strong>Lojas</strong></a>
+            <a id="botao" href="https://www.oburgues.com/#quemsomos" target="_blank"><strong>Quem Somos</strong></a>
         </nav>
     </header>
 
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h1>Bem-vindo à "O Burguês"</h1>
+            <h1>BEM-VINDO À "O Burguês"</h1>
             <p>Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</p>
         </section>
 
-        <section>
-            <h2>Contato</h2>
-            <p>Email: expansao@grupoburgues.com.br </p>
-            <p>Telefone: (83) 3113-6194</p>
-            <p>Siga a gente no <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">Instagram</a></p>
+        <section> 
         </section>
-
-
-    <footer>
-        <p>&copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.</p>
-        <p>
-            Siga a gente nas redes sociais
+        <footer>
+            &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
+            <p></p>
+            Siga a gente nas redes sociais :
+            <p></p>
+            <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">Instagram</a>
         
-        </p>
-    </footer>
+        </footer>
 </body>
 </html>
