--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -6,13 +6,14 @@
     <title>O Burguês - Hamburgueria Artesanal</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
     <header>
         <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
         <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
-            <button>FAÇA SEU PEDIDO AGORA!!</button>
+            <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
         </a>
 
         <nav>
@@ -24,8 +25,8 @@
 
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h1>BEM-VINDO À "O Burguês"</h1>
-            <p>Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</p>
+            <h2>BEM-VINDO À "O Burguês"</h1>
+            <h3>Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h3>
         </section>
 
         <section> 
@@ -35,7 +36,13 @@
             <p></p>
             Siga a gente nas redes sociais :
             <p></p>
-            <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
+                 <i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/hamburgueriaoburgues" target="_blank">
+                 <i class="fab fa-facebook"></i></a>
+            <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
+                 <i class="fab fa-tiktok"></i></a>
+            
         
         </footer>
 </body>
