--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -25,11 +25,8 @@
 
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h2>BEM-VINDO À "O Burguês"</h1>
-            <h3>Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h3>
-        </section>
-
-        <section> 
+            <h2>BEM-VINDO À O BURGUÊS <br>
+            <b id="bem-vindo">Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h2></b>
         </section>
         <footer>
             &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
@@ -42,8 +39,6 @@
                  <i class="fab fa-facebook"></i></a>
             <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
                  <i class="fab fa-tiktok"></i></a>
-            
-        
         </footer>
 </body>
 </html>
