--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -29,16 +29,21 @@
             <b id="bem-vindo">Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h2></b>
         </section>
         <footer>
-            &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
-            <p></p>
-            Siga a gente nas redes sociais :
-            <p></p>
-            <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
+            <div>
+                <img id="img-rodape" src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
+                <p></p>
+                &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
+                <p></p>
+                Siga a gente nas redes sociais :
+                <p></p>
+                <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
                  <i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/hamburgueriaoburgues" target="_blank">
+                <a href="https://www.facebook.com/hamburgueriaoburgues" target="_blank">
                  <i class="fab fa-facebook"></i></a>
-            <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
+                <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
                  <i class="fab fa-tiktok"></i></a>
+            </div>
         </footer>
+        
 </body>
 </html>
