--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -34,7 +34,8 @@
                 <p></p>
                 &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
                 <p></p>
-                Siga a gente nas redes sociais :
+                <hr>
+                Compartilhe algo Delicioso
                 <p></p>
                 <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
                  <i class="fab fa-instagram"></i></a>
@@ -42,6 +43,7 @@
                  <i class="fab fa-facebook"></i></a>
                 <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
                  <i class="fab fa-tiktok"></i></a>
+                <h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5>
             </div>
         </footer>
         
