--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -28,6 +28,15 @@
             <h2>BEM-VINDO À O BURGUÊS <br>
             <b id="bem-vindo">Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h2></b>
         </section>
+
+        <hr>
+        
+        <div>
+             <img id="img-body" class="mesclar" src="https://img.freepik.com/fotos-premium/delicioso-hamburguer-fresco-isolado-no-fundo-branco-close-up_93675-104918.jpg">
+             <h1>BACON BBQ</h1>
+             <h2 id="h2">BLEND 110G COMO CHEDDAS ESPECIAL E TIRAS DE BACON</h2>
+        </div>
+
         <footer>
             <div>
                 <img id="img-rodape" src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
