--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -11,22 +11,24 @@
 <body>
 
     <header>
-        <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
-        <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
-            <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
-        </a>
-
+           <img src="imagens/logo_burgues_laranja_2 (1).png"
+            alt="Logo O Burguês">
         <nav>
+            <a id="botao" href="" target="_blank"><strong>Bem-Vindo</strong></a>
             <a id="botao" href="https://www.oburgues.com/#quemsomos" target="_blank"><strong>Quem Somos</strong></a>
             <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank"><strong>Lojas</strong></a>
             <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank"><strong>Cardápio</strong></a>
+             <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
+            <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
+            </a>
         </nav>
     </header>
 
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h2>BEM-VINDO À O BURGUÊS <br>
-            <b id="bem-vindo">Somos uma hamburgueria artesanal que preza pela qualidade dos ingredientes e pelo sabor inesquecível. Venha conhecer nosso cardápio exclusivo!</h2></b>
+            <h2><b id="frase">A revolução do sabor começa aqui!</b><br>
+            <b id="bem-vindo">No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
+            Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
         </section>
 
         <hr>
@@ -39,7 +41,7 @@
 
         <footer>
             <div>
-                <img id="img-rodape" src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
+                <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
                 <p></p>
                 &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
                 <p></p>
