--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -14,8 +14,8 @@
            <img src="imagens/logo_burgues_laranja_2 (1).png"
             alt="Logo O Burguês">
         <nav>
-            <a id="botao" href="" target="_blank"><strong>Bem-Vindo</strong></a>
-            <a id="botao" href="https://www.oburgues.com/#quemsomos" target="_blank"><strong>Quem Somos</strong></a>
+            <a id="botao" href="#frase"><strong>Bem-Vindo</strong></a>
+            <a id="botao" href="https://www.oburgues.com/#quemsomos"><strong>Quem Somos</strong></a>
             <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank"><strong>Lojas</strong></a>
             <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank"><strong>Cardápio</strong></a>
              <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
@@ -23,22 +23,17 @@
             </a>
         </nav>
     </header>
-
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h2><b id="frase">A revolução do sabor começa aqui!</b><br>
+            <h2><b id="frase1">A revolução do sabor começa aqui!</b><br>
             <b id="bem-vindo">No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
             Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
         </section>
-
-        <hr>
-        
-        <div>
-             <img id="img-body" class="mesclar" src="https://img.freepik.com/fotos-premium/delicioso-hamburguer-fresco-isolado-no-fundo-branco-close-up_93675-104918.jpg">
-             <h1>BACON BBQ</h1>
-             <h2 id="h2">BLEND 110G COMO CHEDDAS ESPECIAL E TIRAS DE BACON</h2>
-        </div>
-
+        <hr id="linha">
+        <section id="quem-somos">
+            <h3><b id="frase2">Quem Somos</b><br>
+            <b id="bem-vindo">O Burguês é mais do que uma hamburgueria, é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são feitos com ingredientes frescos e de alta qualidade, preparados com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</h3></b>
+        </section>
         <footer>
             <div>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
