--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -34,6 +34,11 @@
             <h3><b id="frase2">Quem Somos</b><br>
             <b id="bem-vindo">O Burguês é mais do que uma hamburgueria, é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são feitos com ingredientes frescos e de alta qualidade, preparados com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</h3></b>
         </section>
+        <hr id="linha">
+        <div id="lojas">
+            <h2><b id="frase1">Nossas Lojas</b><br>
+            <b id="bem-vindo">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2></b>
+        </div>
         <footer>
             <div>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
