--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -38,7 +38,13 @@
         <div id="lojas">
             <h2><b id="frase1">Nossas Lojas</b><br>
             <b id="bem-vindo">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
+            <section class="galery"  id="galery1" style="text-align: center;">
+            <img  width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png " alt="foto ">
+              <aside class="descripition zindex"></aside>
+            <br>
+         </section>
         </div>
+
         <footer>
             <div>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
