--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,9 +31,29 @@
             Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
         </section>
         <hr id="linha">
+
         <section id="quem-somos">
-            <h3><b id="frase2">Quem Somos</b><br>
-            <b id="bem-vindo">O Burguês é mais do que uma hamburgueria, é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são feitos com ingredientes frescos e de alta qualidade, preparados com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</h3></b>
+            <h3><b id="frase2">QUEM SOMOS?</b><br>
+            <b id="bem-vindo"> - O Burguês é mais do que uma hamburgueria, é um lugar onde a paixão pela comida se encontra com a criatividade. 
+            Nossos hambúrgueres são feitos com ingredientes frescos e de alta qualidade, preparados com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</h3></b>
+
+            <h2><b id="h2"> - criado com intuito de inovar mercado de hamburgueria no rio de janeiro,
+                o Burgues iniciou sua operação com uma loja em fevereiro de 2017.</b></h2>
+
+            <h2><b id="h2."> - Produtos de alta qualidade aliados
+                a um modelo de negócio de administração simples e de baixo risco
+            fizeram a marca superar as espectativas do segmento e alcançar
+        em 5 anos um crescimento meteórico
+         -com 51 franquias inauguradas. </b></h2>
+
+         <h2><b id="h2.."> - Hoje o burgues se consolida
+            como a maior hamburgueria delivery Brasil
+            com lojas tambem no Ceara, Bahia, Minas Gerais,
+            Espirito Santo, São Paulo e Parána.
+         </b></h2>
+
+            <img id="img" src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=">
+
         </section>
         <hr id="linha">
         <div id="lojas">
