--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -15,11 +15,11 @@
            <img src="imagens/logo_burgues_laranja_2 (1).png"
             alt="Logo O Burguês">
         <nav>
-            <a id="botao" href="#frase1"><strong>Bem-Vindo</strong></a>
-            <a id="botao" href="https://www.oburgues.com/#quemsomos"><strong>Quem Somos</strong></a>
-            <a id="botao" href="https://www.instagram.com/hamburgueriaoburgues/?hl=pt" target="_blank"><strong>Lojas</strong></a>
-            <a id="botao" href="https://www.ifood.com.br/delivery/sao-paulo-sp/o-burgues---burger-brooklin-brooklin/f86097f2-5afb-4e2d-a31a-5f01e0e164e2" target="_blank"><strong>Cardápio</strong></a>
-             <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
+            <a id="botao" href="#bem-vindo"><strong>Bem-Vindo</strong></a>
+            <a id="botao" href="#frase1"><strong>Quem Somos</strong></a>
+            <a id="botao" href="#lojas"><strong>Lojas</strong></a>
+            <a id="botao" href="#cardapio"><strong>Cardápio</strong></a>
+            <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
             <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
             </a>
         </nav>
@@ -27,7 +27,7 @@
     <!-- Pricipal conteúdo da página -->
         <section>
             <h2><b id="frase1">A revolução do sabor começa aqui!</b><br>
-            <b id="bem-vindo">No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
+            <b id="bem-vindo">- No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
             Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
         </section>
         <hr id="linha">
