--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -26,39 +26,32 @@
     </header>
     <!-- Pricipal conteúdo da página -->
         <section>
-            <h2><b id="frase1">A revolução do sabor começa aqui!</b><br>
-            <b id="bem-vindo">- No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
+            <h2><b id="frase1">A REVOLUÇÃO DO SABOR COMEÇA AQUI</b><br>
+            <p></p>
+            <b id="h2"> No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
             Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
         </section>
         <hr id="linha">
 
         <section id="quem-somos">
-            <h3><b id="frase2">QUEM SOMOS?</b><br>
-            <b id="bem-vindo"> - O Burguês é mais do que uma hamburgueria, é um lugar onde a paixão pela comida se encontra com a criatividade. 
-            Nossos hambúrgueres são feitos com ingredientes frescos e de alta qualidade, preparados com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</h3></b>
-
-            <h2><b id="h2"> - criado com intuito de inovar mercado de hamburgueria no rio de janeiro,
-                o Burgues iniciou sua operação com uma loja em fevereiro de 2017.</b></h2>
-
-            <h2><b id="h2."> - Produtos de alta qualidade aliados
-                a um modelo de negócio de administração simples e de baixo risco
-            fizeram a marca superar as espectativas do segmento e alcançar
-        em 5 anos um crescimento meteórico
-         -com 51 franquias inauguradas. </b></h2>
-
-         <h2><b id="h2.."> - Hoje o burgues se consolida
-            como a maior hamburgueria delivery Brasil
-            com lojas tambem no Ceara, Bahia, Minas Gerais,
-            Espirito Santo, São Paulo e Parána.
-         </b></h2>
+            <h3><b id="frase1">QUEM SOMOS </b><br>
+                <p></p>
+                <b id="h2">O Burguês é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!
+                <p></p>
+                Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.
+                <p></p>
+                Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.
+                <p></p>
+                Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.
+            </b></h3>
 
             <img id="img" src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=">
 
         </section>
         <hr id="linha">
         <div id="lojas">
-            <h2><b id="frase1">Nossas Lojas</b><br>
-            <b id="bem-vindo">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
+            <h2><b id="frase1">NOSSAS LOJAS</b><br>
+            <b id="h2">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
             <section class="galery"  id="galery1" style="text-align: center;">
             <img  width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png " alt="foto ">
               <aside class="descripition zindex"></aside>
