--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -25,7 +25,10 @@
         </nav>
     </header>
     <!-- Pricipal conteúdo da página -->
-        <section>
+        <section class="section-flex">
+            <p></p>
+            <img id="logo" src="https://static.ifood-static.com.br/image/upload/t_high/logosgde/2c639475-b65d-4cf8-aaf3-720837de9a6c/202006111850_sUP6_i.png" alt="Foto da logo do Burguês">
+            <div class="texto-section"></div>
             <h2><b id="frase1">A REVOLUÇÃO DO SABOR COMEÇA AQUI</b><br>
             <p></p>
             <b id="h2"> No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
