--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -15,7 +15,7 @@
            <img src="imagens/logo_burgues_laranja_2 (1).png"
             alt="Logo O Burguês">
         <nav>
-            <a id="botao" href="#bem-vindo"><strong>Bem-Vindo</strong></a>
+            <a id="botao" href="#logo"><strong>Bem-Vindo</strong></a>
             <a id="botao" href="#frase1"><strong>Quem Somos</strong></a>
             <a id="botao" href="#lojas"><strong>Lojas</strong></a>
             <a id="botao" href="#cardapio"><strong>Cardápio</strong></a>
@@ -28,11 +28,12 @@
         <section class="section-flex">
             <p></p>
             <img id="logo" src="https://static.ifood-static.com.br/image/upload/t_high/logosgde/2c639475-b65d-4cf8-aaf3-720837de9a6c/202006111850_sUP6_i.png" alt="Foto da logo do Burguês">
-            <div class="texto-section"></div>
+            <div>
             <h2><b id="frase1">A REVOLUÇÃO DO SABOR COMEÇA AQUI</b><br>
             <p></p>
-            <b id="h2"> No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
+            <b class="texto-section" id="h2"> No O Burguês, cada hambúrguer é uma experiência. Com ingredientes frescos, combinações ousadas e um toque artesanal, a gente transforma seu lanche em um momento inesquecível. Do clássico ao criativo, temos o hambúrguer perfeito para o seu apetite.
             Sinta-se em casa, escolha o seu favorito e prepare-se para devorar!</h2></b>
+            </div>
         </section>
         <hr id="linha">
 
