--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -56,13 +56,31 @@
         <div id="lojas">
             <h2><b id="frase1">NOSSAS LOJAS</b><br>
             <b id="h2">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
-            <section class="galery"  id="galery1" style="text-align: center;">
-            <img  width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png " alt="foto ">
-              <aside class="descripition zindex"></aside>
-            <br>
-         </section>
+            <nav class="galery"  id="galery1" style="text-align: center;">
+                <img align="center" width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png " alt="foto ">
+                <aside class="descripition zindex"></aside>
+                <br id="linha">
+            </nav>
         </div>
+        <hr id="linha">
+       <nav>
+        <form class="formulario" action="#" method="post">
+            <h2>Fale Conosco</h2>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required placeholder="Seu nome completo">
 
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required placeholder="seu@email.com">
+
+            <label for="telefone">Telefone:</label>
+            <input type="tel" id="telefone" name="telefone" placeholder="(99) 99999-9999">
+
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" rows="5" required placeholder="Digite sua mensagem"></textarea>
+
+            <button type="submit">Enviar</button>
+        </form>
+       </nav>
         <footer>
             <div>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
