correção quem somos

--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -37,7 +37,7 @@
         </section>
         <hr id="linha">
 
-        <section id="quem-somos">
+        <section class="section-flex" id="quem-somos">
             <h3><b id="frase1">QUEM SOMOS </b><br>
                 <p></p>
                 <b id="h2">O Burguês é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!
@@ -47,6 +47,8 @@
                 Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.
                 <p></p>
                 Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.
+                <p></p>
+                Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca alta lucratividade em um modelo enxuto.
             </b></h3>
 
             <img id="img" src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=">
@@ -55,9 +57,9 @@
         <hr id="linha">
         <div id="lojas">
             <h2><b id="frase1">NOSSAS LOJAS</b><br>
-            <b id="h2">Estamos presentes em várias cidades, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
+            <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
             <nav class="galery"  id="galery1" style="text-align: center;">
-                <img align="center" width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png " alt="foto ">
+                <img align="center" width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png" alt="foto ">
                 <aside class="descripition zindex"></aside>
                 <br id="linha">
             </nav>
