--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -75,7 +75,7 @@
             <input type="email" id="email" name="email" required placeholder="seu@email.com">
 
             <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" placeholder="(99) 99999-9999">
+            <input type="tel" id="telefone" name="telefone" required placeholder="(99) 99999-9999">
 
             <label for="mensagem">Mensagem:</label>
             <textarea id="mensagem" name="mensagem" rows="5" required placeholder="Digite sua mensagem"></textarea>
