--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -58,12 +58,12 @@
         <div id="lojas">
             <h2><b id="frase1">NOSSAS LOJAS</b><br>
             <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
-            <nav class="galery"  id="galery1" style="text-align: center;">
-                <img align="center" width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png" alt="foto ">
-                <aside class="descripition zindex"></aside>
-                <br id="linha">
+        </div>   
+            <nav class="galery" style="text-align: center;" >
+                <img src="https://i.im.ge/2025/05/19/vZ4u0m.inal.png" alt="foto.png" width="1000" height="500"  >
+                <br>
             </nav>
-        </div>
+        
         <hr id="linha">
        <nav>
         <form class="formulario" action="#" method="post">
