--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -44,7 +44,7 @@
                 <p></p>
                 Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.
                 <p></p>
-                Produto de altas qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.
+                Produtos de altas qualidades, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.
                 </h3>
 
             <img id="img" src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=">
@@ -55,12 +55,12 @@
         <div id="lojas">
             <h2><b id="frase1">NOSSAS LOJAS</b><br>
             <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
-            <nav class="galery"  id="galery1" style="text-align: center;">
-                <img align="center" width="1000" height="500" src="https://i.im.ge/2025/05/16/v8JE6M.Design-sem-nome-2.png" alt="foto ">
-                <aside class="descripition zindex"></aside>
-                <br id="linha">
+        </div>   
+            <nav class="galery" style="text-align: center;" >
+                <img src="https://i.im.ge/2025/05/19/vZ4u0m.inal.png" alt="foto.png" width="1000" height="500"  >
+                <br>
             </nav>
-        </div>
+        
         <hr id="linha">
        <nav>
         <form class="formulario" action="#" method="post">
@@ -72,7 +72,7 @@
             <input type="email" id="email" name="email" required placeholder="seu@email.com">
 
             <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" placeholder="(99) 99999-9999">
+            <input type="tel" id="telefone" name="telefone" required placeholder="(99) 99999-9999">
 
             <label for="mensagem">Mensagem:</label>
             <textarea id="mensagem" name="mensagem" rows="5" required placeholder="Digite sua mensagem"></textarea>
