--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -37,7 +37,7 @@
         </section>
         <hr id="linha">
 
-        <section class="section-flex" id="quem-somos">
+        <section id="quem-somos">
             <h3><b id="frase1">QUEM SOMOS </b><br>
                 <p></p>
                 <b id="h2">O Burguês é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!
@@ -45,7 +45,15 @@
                 Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.
                 <p></p>
                 Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.
-                </h3>
+                <p></p>
+                Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas tambem no Ceará, Bahia, minas Gerais, Espirito santo, São Paulo e Paraná
+                <p></p>
+                Uma hamburgueria que é sinonimo de qualidade e inovação no mrcado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca alta lucratividade em um moddelo enxuto.
+            </h3>
+
+            <button id="button-dois" onclick="window.location.href='https://www.oburgues.com/'">
+            <b><ins>SAIBA MAIS</ins></b>
+            </button>
 
             <img id="img" src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=">
 
