--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -60,12 +60,13 @@
         </section>
         <hr id="linha">
         <div id="lojas">
-            <h2><b id="frase1">NOSSAS LOJAS</b><br>
+            <h2><b id="frase1">NOSSAS LOJAS</b><br><br>
             <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
-        </div>   
-            <nav class="galery" style="text-align: center;" >
-                <img src="https://i.im.ge/2025/05/19/vZ4u0m.inal.png" alt="foto.png" width="1000" height="500"  >
-                <br>
+        </div>
+
+            <nav id="imagemdaloja" >
+                <img style="text-align: center;" src="https://i.im.ge/2025/05/20/vKhn8G.inal.png" alt="foto.png" width="1000" height="500"  >
+                <br><br><br><br>
             </nav>
         
         <hr id="linha">
