--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -60,13 +60,12 @@
         </section>
         <hr id="linha">
         <div id="lojas">
-            <h2><b id="frase1">NOSSAS LOJAS</b><br><br>
+            <h2><b id="frase1">NOSSAS LOJAS</b><br>
             <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
-        </div>
-
-            <nav id="imagemdaloja" >
-                <img style="text-align: center;" src="https://i.im.ge/2025/05/20/vKhn8G.inal.png" alt="foto.png" width="1000" height="500"  >
-                <br><br><br><br>
+        </div>   
+            <nav class="galery" style="text-align: center;" >
+                <img src="https://i.im.ge/2025/05/19/vZ4u0m.inal.png" alt="foto.png" width="1000" height="500"  >
+                <br>
             </nav>
         
         <hr id="linha">
@@ -89,7 +88,6 @@
         </form>
        </nav>
         <footer>
-            <div>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
                 <p></p>
                 &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
@@ -104,7 +102,6 @@
                 <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
                  <i class="fab fa-tiktok"></i></a>
                 <h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5>
-            </div>
         </footer>
         
 </body>
