coloquei umas coisa ai

--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -61,13 +61,16 @@
         <hr id="linha">
         <div id="lojas">
             <h2><b id="frase1">NOSSAS LOJAS</b><br>
-            <b id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
+            <b  style="text-align: left;"  id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
         </div>   
-             <nav id="imagemdaloja" >
+           
+            <nav id="imagemdaloja" >
                 <img style="text-align: center;" src="https://i.im.ge/2025/05/20/vKhn8G.inal.png" alt="foto.png" width="1000" height="500"  >
-                <br>
-             </nav>
-             <p></p>
+                <br><br><br><br>
+            </nav>
+
+
+        
              <hr id="linha">
        <nav>
         <form class="formulario" action="#" method="post">
